TOT-88 : [FEAT] 특정 카테고리 필터링 기능 추가 - '축제공연행사', '여행코스' 카테고리 필터링 로직 추가